fix whitespace

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -33,6 +33,10 @@ body > iframe[style*="2147483647"]:not([id="webpack-dev-server-client-overlay"])
     padding: 4rem 0;
 }
 
+th {
+    white-space: nowrap;
+}
+
 p, .contentContainer {
     color: ghostwhite;
     font-size: 18px;
